--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -26,7 +26,11 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span class="spacer"></span>
-    <button mat-button>
+
+    <span>{{ user?.email }}</span>
+
+    <button mat-button
+      (click)="onLogout()">
       Logout
     </button>
   </mat-toolbar>
